--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -1,15 +1,15 @@
 - name: remove existing directory
   ansible.builtin.file:
-    path: "{{ APP_LOCAION }}" # backend folder is /app, frontend /usr/share/nginx/html
+    path: "{{ APP_LOCATION }}" # backend folder is /app, frontend /usr/share/nginx/html
     state: absent
 
 - name: create app directory
   ansible.builtin.file:
-    path: "{{ APP_LOCAION }}" # backend folder is /app, frontend /usr/share/nginx/html
+    path: "{{ APP_LOCATION }}" # backend folder is /app, frontend /usr/share/nginx/html
     state: directory
 
 - name: download app code
   ansible.builtin.unarchive:
     src: "https://expense-builds.s3.us-east-1.amazonaws.com/expense-{{ COMPONENT }}-v2.zip"
-    dest: "{{ APP_LOCAION }}"
+    dest: "{{ APP_LOCATION }}"
     remote_src: yes
