--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,3 +1,3 @@
 BACKEND_HOST: backend.omnamahashivaya.online
-APP_LOCAION: /usr/share/nginx/html
+APP_LOCATION: /usr/share/nginx/html
 COMPONENT: frontend
