--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -20,7 +20,7 @@
 - name: connect to mysql server
   community.mysql.mysql_info:
     login_user: root
-    login_password: "{{mysql_root_password }}"
+    login_password: "{{ lookup('amazon.aws.ssm', '/expense/omnamahashivaya/mysql_root_password', 'decrypt=False') }}"
     login_host: "{{ mysql_host }}"
   register: mysql_info
   ignore_errors: true
@@ -30,5 +30,5 @@
     msg: "MySQL info: {{ mysql_info }}"
 
 - name: setup root password
-  ansible.builtin.command:  "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
+  ansible.builtin.command:  "mysql_secure_installation --set-root-pass {{ lookup('amazon.aws.ssm', '/expense/omnamahashivaya/mysql_root_password', 'decrypt=False') }}"
   when: mysql_info.failed is true
