--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -24,11 +24,13 @@
     login_host: "{{ mysql_host }}"
   register: mysql_info
   ignore_errors: yes
-  
+
 - name: print the output
   ansible.builtin.debug:
     msg: "MySQL info: {{ mysql_info }}"
 
-- name: setup root password
-  ansible.builtin.command:  "mysql_secure_installation --set-root-pass {{ lookup('amazon.aws.ssm', '/expense/omnamahashivaya/mysql_root_password', 'decrypt=False') }}"
-  when: mysql_info.failed is true
+- name: Setup root password
+  ansible.builtin.command: >
+    mysql_secure_installation --set-root-pass
+    {{ lookup('amazon.aws.ssm', '/expense/omnamahashivaya/mysql_root_password', 'decrypt=False') }}
+  when: mysql_info.failed | bool
