--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -20,7 +20,7 @@
 - name: Connect to MySQL server
   community.mysql.mysql_info:
     login_user: root
-    login_password: "{{ lookup('amazon.aws.ssm', '/realproject/om/mysql-password', 'decrypt=True') }}"
+    login_password: "{{ lookup('amazon.aws.ssm', '/realproject/om/mysql-password', decrypt=True) }}"
     login_host: "{{ mysql_host }}"
   register: mysql_info
   ignore_errors: yes
@@ -30,5 +30,5 @@
     msg: "MySQL info: {{ mysql_info }}"
 
 - name: setup root password
-  ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ lookup('amazon.aws.aws_ssm', '/realproject/om/mysql-password', 'decrypt=True' ) }}"
+  ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ lookup('amazon.aws.aws_ssm', '/realproject/om/mysql-password', decrypt=True) }}"
   when: mysql_info.failed is true
