--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [mysql]
-mysql.omnamahashivaya.online
+mysql.omnamahashivaya.online  ansible_python_interpreter=/usr/bin/python3
 
 [backend]
 backend.omnamahashivaya.online
